there was a wrong URL!

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://featureenvy.github.com
+url: http://featureenvy.com
 title: Feature Envy
 subtitle: Because Feature Envy Shouldn't Be
 author: Andreas Arnold
